Modified the design of the U.I by Rudolph Garcia

--- a/app/src/main/res/layout/activity_add_directions.xml
+++ b/app/src/main/res/layout/activity_add_directions.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView4"
         android:layout_width="187dp"
         android:layout_height="29dp"
-        android:fontFamily="sans-serif-condensed"
+        android:fontFamily="cursive"
         android:text="Additional Direction"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,7 +39,7 @@
         android:id="@+id/textView"
         android:layout_width="109dp"
         android:layout_height="33dp"
-        android:fontFamily="sans-serif-condensed"
+        android:fontFamily="cursive"
         android:text="1st Direction"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -53,7 +53,7 @@
         android:id="@+id/textView3"
         android:layout_width="107dp"
         android:layout_height="33dp"
-        android:fontFamily="sans-serif-condensed"
+        android:fontFamily="cursive"
         android:text="2nd Direction"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -67,6 +67,7 @@
         android:id="@+id/addBothDirectionsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="cursive"
         android:text="Add BOTH Directions"
         android:textAllCaps="false"
         app:backgroundTint="#9C27B0"
@@ -80,6 +81,7 @@
         android:id="@+id/additionalDirectionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="cursive"
         android:text="Add Additional Direction"
         android:textAllCaps="false"
         app:backgroundTint="#FFC107"
@@ -138,6 +140,7 @@
         android:id="@+id/toAddTagsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="cursive"
         android:text="Add Tags"
         android:textAllCaps="false"
         app:backgroundTint="#F675A1"
