--- a/app/src/main/res/layout/activity_add_ingredients.xml
+++ b/app/src/main/res/layout/activity_add_ingredients.xml
@@ -42,6 +42,7 @@
         android:id="@+id/toDirectionPageButtons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="cursive"
         android:text="Add Directions"
         android:textAllCaps="false"
         app:backgroundTint="#F675A1"
@@ -93,7 +94,7 @@
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-condensed"
+        android:fontFamily="cursive"
         android:text="Additional Ingredient"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -131,7 +132,7 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-condensed"
+        android:fontFamily="cursive"
         android:text="1st Ingredient"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -171,7 +172,7 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-condensed"
+        android:fontFamily="cursive"
         android:text="2nd Ingredient"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -200,6 +201,7 @@
         android:id="@+id/addBothIngredientsButton"
         android:layout_width="197dp"
         android:layout_height="38dp"
+        android:fontFamily="cursive"
         android:text="Add Both Ingredients"
         android:textAllCaps="false"
         android:textSize="12sp"
@@ -214,6 +216,7 @@
         android:id="@+id/addAdditionalIngredientButton"
         android:layout_width="252dp"
         android:layout_height="49dp"
+        android:fontFamily="cursive"
         android:text="Add Additional Ingredient"
         android:textAllCaps="false"
         android:textSize="12sp"
