--- a/app/src/main/res/layout/activity_add_tags.xml
+++ b/app/src/main/res/layout/activity_add_tags.xml
@@ -12,6 +12,7 @@
         android:id="@+id/textView9"
         android:layout_width="138dp"
         android:layout_height="50dp"
+        android:fontFamily="cursive"
         android:text="Add Tags"
         android:textSize="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,9 +25,10 @@
         android:id="@+id/textView14"
         android:layout_width="64dp"
         android:layout_height="25dp"
+        android:fontFamily="cursive"
         android:text="Search"
-        android:textSize="20sp"
 
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -65,6 +67,7 @@
         android:id="@+id/goToConfirmPost"
         android:layout_width="146dp"
         android:layout_height="67dp"
+        android:fontFamily="cursive"
         android:text="Next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
