--- a/app/src/main/res/layout/activity_additional_directions.xml
+++ b/app/src/main/res/layout/activity_additional_directions.xml
@@ -41,6 +41,7 @@
         android:id="@+id/addAdditionalDirectionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="cursive"
         android:text="Add Additional Direction"
         android:textAllCaps="false"
         app:backgroundTint="#FFC107"
@@ -55,6 +56,7 @@
         android:id="@+id/toContinuePostId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="cursive"
         android:text="Continue"
         android:textAllCaps="false"
         app:backgroundTint="#F675A1"
