--- a/app/src/main/res/layout/activity_additional_ingredients.xml
+++ b/app/src/main/res/layout/activity_additional_ingredients.xml
@@ -83,6 +83,7 @@
         android:id="@+id/addAdditionalIngredientButtonId"
         android:layout_width="252dp"
         android:layout_height="49dp"
+        android:fontFamily="cursive"
         android:text="Add Additional Ingredient"
         android:textAllCaps="false"
         android:textSize="12sp"
@@ -99,6 +100,7 @@
         android:id="@+id/toConfirmPageButtons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="cursive"
         android:text="Continue"
         android:textAllCaps="false"
         app:backgroundTint="#F675A1"
