--- a/app/src/main/res/layout/activity_confirm_post.xml
+++ b/app/src/main/res/layout/activity_confirm_post.xml
@@ -50,6 +50,7 @@
         android:layout_width="102dp"
         android:layout_height="29dp"
         android:layout_marginTop="9dp"
+        android:fontFamily="cursive"
         android:text="Add More?"
         android:textSize="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -64,12 +65,13 @@
         android:layout_width="102dp"
         android:layout_height="29dp"
         android:layout_marginBottom="16dp"
+        android:fontFamily="cursive"
         android:text="Add More?"
         android:textSize="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.113"
 
+        app:layout_constraintHorizontal_bias="0.113"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerViewDirectionsId"
         app:layout_constraintVertical_bias="1.0" />
@@ -79,12 +81,13 @@
         android:layout_width="102dp"
         android:layout_height="29dp"
         android:layout_marginBottom="16dp"
+        android:fontFamily="cursive"
         android:text="Continue"
         android:textSize="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.912"
 
+        app:layout_constraintHorizontal_bias="0.912"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerViewDirectionsId"
         app:layout_constraintVertical_bias="1.0" />
