--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -40,6 +40,7 @@
         android:id="@+id/recipePostPageNote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-black"
         android:text="Input the following information"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +53,7 @@
         android:id="@+id/continueRecipeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
+        android:fontFamily="cursive"
         android:text="Continue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,8 +64,9 @@
 
     <Button
         android:id="@+id/postCancelButton"
-        android:layout_width="77dp"
-        android:layout_height="37dp"
+        android:layout_width="96dp"
+        android:layout_height="38dp"
+        android:fontFamily="cursive"
         android:text="Cancel"
         android:textSize="10sp"
         app:backgroundTint="@android:color/holo_red_light"
@@ -107,6 +109,7 @@
         android:id="@+id/addImageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="cursive"
         android:text="Add Image"
         app:layout_constraintBottom_toTopOf="@+id/pictureID"
         app:layout_constraintEnd_toEndOf="parent"
