--- a/app/src/main/res/layout/activity_display_comments.xml
+++ b/app/src/main/res/layout/activity_display_comments.xml
@@ -21,6 +21,7 @@
         android:id="@+id/backButtonToPost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="cursive"
         android:text="Go Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
