--- a/app/src/main/res/layout/activity_final_confirm_post.xml
+++ b/app/src/main/res/layout/activity_final_confirm_post.xml
@@ -11,6 +11,7 @@
         android:id="@+id/confirmPostTitleId"
         android:layout_width="192dp"
         android:layout_height="70dp"
+        android:fontFamily="cursive"
         android:text="Confirm Post"
         android:textSize="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -52,6 +53,7 @@
         android:id="@+id/cancelPostButtonId"
         android:layout_width="90dp"
         android:layout_height="32dp"
+        android:fontFamily="cursive"
         android:text="Cancel"
         android:textSize="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -65,6 +67,7 @@
         android:id="@+id/uploadPostId"
         android:layout_width="91dp"
         android:layout_height="33dp"
+        android:fontFamily="cursive"
         android:text="Upload"
         android:textSize="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
