--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
         android:id="@+id/sign_in"
         android:layout_width="157dp"
         android:layout_height="71dp"
+        android:fontFamily="cursive"
         android:text="SIGN IN"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,6 +49,7 @@
         android:id="@+id/register_button"
         android:layout_width="156dp"
         android:layout_height="76dp"
+        android:fontFamily="cursive"
         android:text="Register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
