--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -17,6 +17,7 @@
         android:layout_marginEnd="67dp"
         android:layout_marginRight="67dp"
         android:layout_marginBottom="489dp"
+        android:fontFamily="cursive"
         android:text="Forgot Password"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textSize="36sp"
@@ -54,6 +55,7 @@
         android:layout_marginEnd="135dp"
         android:layout_marginRight="135dp"
         android:layout_marginBottom="331dp"
+        android:fontFamily="cursive"
         android:text="Send Password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
