--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -39,6 +39,7 @@
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="cursive"
         android:text="Search by"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -91,6 +92,7 @@
         android:id="@+id/textView16"
         android:layout_width="76dp"
         android:layout_height="43dp"
+        android:fontFamily="cursive"
         android:text="Tags"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
