--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -11,6 +11,7 @@
         android:id="@+id/logOutofAccountButton"
         android:layout_width="261dp"
         android:layout_height="41dp"
+        android:fontFamily="cursive"
         android:text="Log out of Account"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,6 +23,7 @@
         android:id="@+id/resetPasswordButton"
         android:layout_width="261dp"
         android:layout_height="41dp"
+        android:fontFamily="cursive"
         android:text="Reset Password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,6 +35,7 @@
         android:id="@+id/getOutOfSettings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:tint="#E91E63"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.019"
@@ -45,14 +48,15 @@
         android:id="@+id/textView18"
         android:layout_width="176dp"
         android:layout_height="58dp"
+        android:fontFamily="cursive"
         android:text="Settings"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.565"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.049" />
+        app:layout_constraintVertical_bias="0.052" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
